partman-auto-lvm (25) UNRELEASED; urgency=low

  [ Frans Pop ]
  * Lock devices that are used for physical volumes, as is done when setting
    up LVM using manual partitioning. Requires: partman-lvm (>= 58).
  * auto-lvm.sh: avoid double sourcing of base.sh.

  [ Colin Watson ]
  * Don't emit partman-auto-lvm/no_boot if / is outside LVM (e.g. a system
    with the operating system on a relatively small plain block device and a
    large LVM area for services). Reported by Nick Moffitt.

 -- Frans Pop <fjp@debian.org>  Thu, 27 Dec 2007 14:26:14 +0100

partman-auto-lvm (24) unstable; urgency=low

  * Move deletion of SVN directories to install-rc script.
  * Improve the way install-rc is called.
  * Moved definitions.sh to ./lib/base.sh.
  * Moved recipes.sh and auto-shared.sh to ./lib/; renamed wipe_disk() to
    auto_init_disk().
  * Moved lvm_tools.sh to ./lib/lvm-base.sh.
  * Move auto-lvm_tools.sh to ./lib/auto-lvm.sh.
  * Change priority to optional to allow dynamic loading by partman-base.
  * Requires: partman-base (>= 114); partman-lvm (>= 57);
              partman-auto (>= 73)

  [ Updated translations ]
  * Belarusian (be.po) by Hleb Rubanau
  * Bengali (bn.po) by Jamil Ahmed
  * Danish (da.po) by Claus Hindsgaul
  * Dzongkha (dz.po) by Jurmey Rabgay
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Panjabi (pa.po) by A S Alam
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Portuguese (pt.po) by Miguel Figueiredo
  * Romanian (ro.po) by Eddy Petrișor
  * Vietnamese (vi.po) by Clytie Siddall

 -- Frans Pop <fjp@debian.org>  Tue, 11 Dec 2007 14:05:15 +0100

partman-auto-lvm (23) unstable; urgency=low

  [ David Härdeman ]
  * Pass the device as an explicit argument to wipe_disk, requires
    partman-auto 69

  [ Updated translations ]
  * Basque (eu.po) by Piarres Beobide

 -- Frans Pop <fjp@debian.org>  Thu, 26 Apr 2007 12:01:23 +0200

partman-auto-lvm (22) unstable; urgency=low

  [ Updated translations ]