@@ -4,8 +4,11 @@ partman-base (115) UNRELEASED; urgency=low
   * Move functions confirm_changes and commit_changes from base.sh to new
     function library commit.sh.
   * Clean up the old_devices directory when it's no longer needed.
+  * commit.d/parted: ensure that we clean up obsolete partition directories
+    in the partition's device directory when we commit changes to a device by
+    calling the new function device_cleanup_partitions() in commit.sh.
 
- -- Frans Pop <fjp@debian.org>  Thu, 27 Dec 2007 13:36:27 +0100
+ -- Frans Pop <fjp@debian.org>  Thu, 27 Dec 2007 13:50:19 +0100
 
 partman-base (114) unstable; urgency=low
 
