@@ -3,8 +3,11 @@ partman-partitioning (55) UNRELEASED; urgency=low
   * Major whitespace cleanup and a few minor coding style fixes.
   * Source base.sh from resize.sh instead of the parent script.
   * Use new function library ./lib/commit.sh. Requires partman-base (>= 115).
+  * resize.sh: call device_cleanup_partitions() to ensure we remove obsolete
+    partition info after committing changes (for non-virtual partitions).
+    Requires: partman-base (>= 115).
 
- -- Frans Pop <fjp@debian.org>  Thu, 27 Dec 2007 13:30:17 +0100
+ -- Frans Pop <fjp@debian.org>  Thu, 27 Dec 2007 15:31:30 +0100
 
 partman-partitioning (54) unstable; urgency=low
 
