@@ -4,13 +4,15 @@ partman-auto-lvm (25) UNRELEASED; urgency=low
   * Lock devices that are used for physical volumes, as is done when setting
     up LVM using manual partitioning. Requires: partman-lvm (>= 58).
   * auto-lvm.sh: avoid double sourcing of base.sh.
+  * auto-lvm.sh: call device_cleanup_partitions() to ensure we remove obsolete
+    partition info after committing changes. Requires: partman-base (>= 115).
 
   [ Colin Watson ]
   * Don't emit partman-auto-lvm/no_boot if / is outside LVM (e.g. a system
     with the operating system on a relatively small plain block device and a
     large LVM area for services). Reported by Nick Moffitt.
 
- -- Frans Pop <fjp@debian.org>  Thu, 27 Dec 2007 14:26:14 +0100
+ -- Frans Pop <fjp@debian.org>  Thu, 27 Dec 2007 14:31:50 +0100
 
 partman-auto-lvm (24) unstable; urgency=low
 
